Add helm support to zed editor

--- a/dot_config/zed/private_settings.json
+++ b/dot_config/zed/private_settings.json
@@ -29,5 +29,14 @@
         }
       }
     }
+  },
+    "file_types": {
+    "Helm": [
+      "**/templates/**/*.tpl",
+      "**/templates/**/*.yaml",
+      "**/templates/**/*.yml",
+      "**/helmfile.d/**/*.yaml",
+      "**/helmfile.d/**/*.yml"
+    ]
   }
 }
