--- a/dot_config/zed/private_settings.json
+++ b/dot_config/zed/private_settings.json
@@ -44,7 +44,8 @@
       "**/templates/**/*.yml",
       "**/helmfile.d/**/*.yaml",
       "**/helmfile.d/**/*.yml"
-    ]
+    ],
+    "Dockerfile": [ "Dockerfile.*" ]
   },
   "languages": {
     "Helm": {
